#2480 - Align user avatar in the post composer correctly

--- a/src/components/RichTextArea/RichTextArea.scss
+++ b/src/components/RichTextArea/RichTextArea.scss
@@ -28,6 +28,13 @@
       .portrait + .object {
         margin-left: 2 * $base-unit;
       }
+
+      .portrait {
+        .Avatar {
+          width: 40px;
+          height: 40px;
+        }
+      }
     }
 
     /* additionally rewrite style with heavier selector */
